; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/irq/extr_chip.c_set_irq_chip_and_handler.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/irq/extr_chip.c_set_irq_chip_and_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.irq_chip = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @set_irq_chip_and_handler(i32 %0, %struct.irq_chip* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.irq_chip*, align 8
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store %struct.irq_chip* %1, %struct.irq_chip** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %4, align 4
  %8 = load %struct.irq_chip*, %struct.irq_chip** %5, align 8
  %9 = call i32 @set_irq_chip(i32 %7, %struct.irq_chip* %8)
  %10 = load i32, i32* %4, align 4
  %11 = load i32, i32* %6, align 4
  %12 = call i32 @__set_irq_handler(i32 %10, i32 %11, i32 0, i32* null)
  ret void
}

declare dso_local i32 @set_irq_chip(i32, %struct.irq_chip*) #1

declare dso_local i32 @__set_irq_handler(i32, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
